--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bdcps
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+; spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bdcps
+; spring.datasource.username=root
+; spring.datasource.password=
+; spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:sqlserver://PREDATOR;databaseName=bdcps
+spring.datasource.username=sa
+spring.datasource.password=b100ndy7
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.format_sql=true
