--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 ; spring.datasource.password=
 ; spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:sqlserver://PREDATOR;databaseName=bdcps
-spring.datasource.username=sa
-spring.datasource.password=b100ndy7
+spring.datasource.username=USER
+spring.datasource.password=PASSWORD
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
